# ComfyUI-Openpose-Editor-Plus

./: README.md  __init__.py  nodes.py  pyproject.toml
js/: fabric.min.js  openPoseEditorPlus.js  openpose.js
